<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CombustivelActivity">

    <EditText
        android:id="@+id/edtTextAlcool"
        android:hint="@string/textEdtAlcool"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtTextGasolina"
        android:inputType="numberDecimal"
        android:hint="@string/textEdtGasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTextAlcool"/>

    <Button
        android:id="@+id/btnCalcular"
        android:text="@string/textBtnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtTextGasolina"/>

    <Button
        android:id="@+id/btnCancelar"
        android:text="@string/textBtnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCalcular"/>

</RelativeLayout>